# fastapi-sso

./: .dockerignore  .gitignore  .isort.cfg  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  SECURITY.md  all-docs.md  build-docs.sh  codecov.yaml  example.py  kakao_example.py  microsoft_example.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  tox.Dockerfile  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docs.yml  lint.yml  publish.yml  test.yml
docs/: examples.md  generate_reference.py  how-to-guides.md  index.html  tutorials.md
docs/how-to-guides/: 00-installation.md  additional-query-params.md  additional-scopes.md  http-development.md  key-error.md  redirect-uri-request-time.md  state-return-url.md  use-with-fastapi-security.md
docs/sso/: base.html  facebook.html  fitbit.html  generic.html  github.html  gitlab.html  google.html  index.html  kakao.html  microsoft.html  naver.html  spotify.html
examples/: README.md  apple.py  bitbucket.py  discord.py  facebook.py  fitbit.py  generic.py  github.py  gitlab.py  google.py  kakao.py  line.py  linkedin.py  microsoft.py  naver.py  notion.py  seznam.py  soundcloud.py  tidal.py  twitter.py  yandex.py
fastapi_sso/: __init__.py  pkce.py  state.py
fastapi_sso/infrastructure/: __init__.py  openid.py
fastapi_sso/infrastructure/factories/: __init__.py  provider.py
fastapi_sso/sso/: __init__.py  apple.py  base.py  bitbucket.py  discord.py  facebook.py  fitbit.py  generic.py  github.py  gitlab.py  google.py  kakao.py  line.py  linkedin.py  microsoft.py  naver.py  notion.py  seznam.py  soundcloud.py  spotify.py  tidal.py  twitter.py  yandex.py
tests/: test_base.py  test_generic_provider.py  test_openid_responses.py  test_pkce.py  test_providers.py  test_providers_individual.py  test_race_condition.py  utils.py
