[tool.poetry]
name = "fastapi-sso"
version = "0.9.0"
description = "FastAPI plugin to enable SSO to most common providers (such as Facebook login, Google login and login via Microsoft Office 365 Account)"
authors = ["Tomas Votava <info@tomasvotava.eu>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/tomasvotava/fastapi-sso"
homepage = "https://tomasvotava.github.io/fastapi-sso/"
documentation = "https://tomasvotava.github.io/fastapi-sso/"
keywords = ["fastapi", "sso", "oauth", "google", "facebook", "spotify"]
include = ["fastapi_sso/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=fastapi_sso",
    "--cov-report=xml:coverage.xml",
    "--cov-report=json:coverage.json",
    "--cov-report=term-missing",
    "-n",
    "auto",
]

[tool.poe.tasks]
pylint = "pylint --disable fixme --rcfile .pylintrc fastapi_sso"
todos = "pylint --disable all --enable fixme --rcfile .pylintrc fastapi_sso"
black = "black fastapi_sso"
isort = "isort --settings-path .isort.cfg fastapi_sso"
mypy = "mypy --config-file mypy.ini fastapi_sso"
black-check = "black --check fastapi_sso"
isort-check = "isort --settings-path .isort.cfg --check-only fastapi_sso"

format = ["black", "isort"]
lint = ["pylint", "mypy", "black-check", "isort-check"]
pre-commit = "pre-commit"

test = "pytest"
coverage = "coverage report"

docs = "mkdocs build --clean"

[tool.poetry.group.dev.dependencies]
black = ">=23.7.0"
pylint = ">=2,<4"
uvicorn = ">=0.23.1"
mypy = "^1"
pytest = "^7"
pytest-cov = "^4"
tox = "^4"
poethepoet = ">=0.21.1,<0.25.0"
isort = "^5"
pytest-asyncio = "^0.21.1"
pytest-xdist = "^3"
pre-commit = "^3"
mkdocs-material = { extras = ["imaging"], version = "^9.3.2" }
mkdocstrings = { extras = ["python"], version = ">=0.23,<0.25" }
markdown-include = "^0.8.1"

[tool.black]
line_length = 120

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = ">=0.80"
oauthlib = ">=3.1.0"
pydantic = ">=1.8.0"
httpx = ">=0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
